test/positive/big_package/Thing2.java
package util.subUtil;

public class Thing2 {
    public Thing2() {
    }

    public void doStuff(String s) {
    }
}
