test/negative/AbstractBody.java
public class AbstractBody {
    public abstract void f() {
    }
}
